<resources>
    <string name="app_name">Notely</string>
    <!-- Selecion -->
    <string name="selecciona_la_hora">Selecciona la hora</string>
    <string name="seleciona_la_fecha">Seleciona la fecha</string>

    <!-- Añadir -->
    <string name="add_labels">Añadir etiqueta</string>
    <string name="add_routines">Añadir rutinas</string>
    <string name="add_events">Añadir evento</string>

    <string name="add_new_event_textView">Añade un nuevo evento</string>
    <string name="add_new_routine_textView">Añade una nueva rutina</string>

    <!-- Acciones -->
    <string name="new_action">Nueva acción</string>
    <string name="ajustes">Ajustes</string>
    <string name="all_events">Todos los eventos</string>
    <string name="aceptar">Aceptar</string>

    <!-- Varios -->
    <string name="fecha_actual">Fecha actual</string>
    <string name="sin_etiqueta">Sin etiqueta</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="description">Descripción</string>
    <string name="title">Título</string>
    <string name="seleccionar_dias">Seleccionar días</string>

    <!-- Dias semana-->
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>

    <!-- Registro / Login / Logout -->
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="registro">Registro</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="inicio_sesion">Inicio de sesión</string>
    <string name="recordarContra">Recordar contraseña</string>
    <string name="no_cuenta">¿No tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="cerrar_sesion">Cerrar sesión</string>


    <!-- Otros -->
    <string name="client_id">294672174107-vsk4d2pqu7bk9lgvvd9d7tg0u7p74mc5.apps.googleusercontent.com</string>
    <string name="all_routines">Todas las rutinas</string>
    <string name="nombre_de_la_tarea">Nombre de la tarea</string>
    <string name="agregar">Agregar</string>
    <string name="refrescar">Refrescar</string>
    <string name="completar">Completar</string>
    <string name="anterior">Anterior</string>
    <string name="siguiente">Siguiente</string>
    <string name="mes_a_o">Mes/Año</string>
    <string name="modifica_tu_rutina">Modifica tu rutina</string>
    <string name="modificar_rutina">Modificar rutina</string>
    <string name="a_adir_rutina">Añadir rutina</string>
    <string name="modifica_tu_evento">Modifica tu evento</string>


</resources>