<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/imageViewLogin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/login_account" />

        <TextView
            android:id="@+id/tvInicioSesion"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/inicio_sesion"
            android:textColor="@color/text_color"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/layerdrawable"
            android:baselineAligned="false"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingStart="20dp"
            android:textColor="@color/text_color"/>

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/layerdrawable"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text"
            android:paddingStart="20dp"
            android:textColor="@color/text_color"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:text="Iniciar sesión"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNotAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_cuenta"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/tvRegistrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrate"
                android:textStyle="bold"
                android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPasswordRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recordarContra"
                android:textColor="@color/text_color"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>