<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewRegistration"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/new_account" />

        <TextView
            android:id="@+id/tvRegistro"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/registro"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingStart="20dp"
            android:background="@drawable/layerdrawable"
            android:textColor="@color/text_color"
            />

        <EditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text"
            android:paddingStart="20dp"
            android:background="@drawable/layerdrawable"
            android:textColor="@color/text_color"/>

        <EditText
            android:id="@+id/etRePasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text"
            android:paddingStart="20dp"
            android:background="@drawable/layerdrawable"
            android:textColor="@color/text_color"/>

        <Button
            android:id="@+id/buttonRegistration"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:text="@string/crear_cuenta"
            android:textSize="18dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/text_color"/>

            <TextView
                android:id="@+id/tvLoginRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@color/text_color"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>