<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRoutinesActivity"
    android:background="@color/background_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/scrollViewRoutines">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/mas" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/add_new_routine_textView"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etTitleRoutine"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Título"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/text_color"/>

            <EditText
                android:id="@+id/etDescriptionRoutine"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Descripción"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/tvButtonSelectDaysRoutine"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="Seleccione que días quiere que se repita"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCheckListRoutine"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="Checklist"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/checkListContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTimeRoutine"
                    android:layout_width="301dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/selecciona_la_hora"
                    android:paddingStart="10dp"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/buttonAddTimeRoutine"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounder_corner_gradient"
                    android:src="@drawable/baseline_time"
                    android:contentDescription="@string/selecciona_la_hora"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerLabelRoutine"
                    android:layout_width="303dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"/>

                <ImageButton
                    android:id="@+id/buttonNewLabelRoutine"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounder_corner_gradient"
                    android:src="@drawable/baseline_add"
                    android:contentDescription="@string/add_labels"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerRecordatoryRoutine"
                    android:layout_width="303dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"/>

                <ImageButton
                    android:id="@+id/buttonRecordatoryRoutine"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounder_corner_gradient"
                    android:src="@drawable/baseline_notificacion"
                    android:contentDescription="Recordatorio"/>

            </LinearLayout>

            <Button
                android:id="@+id/buttonSaveRoutine"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Añadir evento"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>